[project]
name = "chinafilm-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "beautifulsoup4>=4.13.4",
    "diskcache>=5.6.3",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "polars>=1.29.0",
    "xlsxwriter>=3.2.3",
]
