[project]
name = "chinafilm-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # async http request
    "aiohttp>=3.11.18",
    # caching
    "diskcache>=5.6.3",
    # logging
    "loguru>=0.7.3",
    # parse HTML
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    # export excel
    "polars>=1.29.0",
    "xlsxwriter>=3.2.3",
]

[tool.uv]
index-url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
